# coure_work_OOP

./: README.md  pyproject.toml
src/: interface.py  vacancy.json
src/api/: api.py
src/engine/: engine_vacancy.py
src/saver/: saver_vacancy.py
